Fix similar products ordering by using flatMapSequential
Flux.flatMap emits results in completion order, not source order, which
violated the contract that similar products must be returned "ordered by
similarity". flatMapSequential preserves source order while keeping the
same bounded concurrency. Also switches Collectors.toList() to the
built-in toList() and tightens the regression test to assert exact
ordering with an artificially delayed first call.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>